--- a/.gitignore
+++ b/.gitignore
@@ -429,3 +429,9 @@ __pycache__/
 # should be stored in the .pubxml.user file.
 
 # End of https://www.gitignore.io/api/c,c++,linux,macos,windows,visualstudio
+
+
+# submodule
+curl/
+websocketpp/
+openssl/
